--- a/vite/package.json
+++ b/vite/package.json
@@ -6,12 +6,11 @@
     "build": "vite build"
   },
   "dependencies": {
-    "vue": "^3.0.0-beta.15"
+    "vue": "^3.0.0-rc.4"
   },
   "devDependencies": {
     "@koa/cors": "^3.1.0",
-    "@prefresh/vite": "^0.10.0",
-    "@vue/compiler-sfc": "^3.0.0-beta.15",
-    "vite": "^1.0.0-beta.11"
+    "@vue/compiler-sfc": "^3.0.0-rc.4",
+    "vite": "^1.0.0-rc.3"
   }
 }
