--- a/vite/package.json
+++ b/vite/package.json
@@ -2,14 +2,15 @@
   "name": "my-php-project",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build"
+    "dev": "APP_ENV=development vite",
+    "build": "APP_ENV=production vite build"
   },
   "dependencies": {
-    "vue": "^3.0.4"
+    "vue": "^3.0.5"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.13",
-    "@vue/compiler-sfc": "^3.0.4"
+    "@vitejs/plugin-vue": "^1.1.2",
+    "@vue/compiler-sfc": "^3.0.5",
+    "vite": "^2.0.0-beta.56"
   }
 }
