--- a/vite/package.json
+++ b/vite/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.1.2",
     "@vue/compiler-sfc": "^3.0.5",
-    "vite": "^2.0.0-beta.56"
+    "vite": "^2.0.0-beta.56",
+    "vite-plugin-live-reload": "^2.0.0-beta.0"
   }
 }
