--- a/vite/package.json
+++ b/vite/package.json
@@ -9,9 +9,9 @@
     "vue": "^3.0.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.1.2",
+    "@vitejs/plugin-vue": "^1.1.4",
     "@vue/compiler-sfc": "^3.0.5",
-    "vite": "^2.0.0-beta.56",
+    "vite": "^2.0.1",
     "vite-plugin-live-reload": "^2.0.0-beta.0"
   }
 }
