--- a/vite/package.json
+++ b/vite/package.json
@@ -6,12 +6,12 @@
     "build": "APP_ENV=production vite build"
   },
   "dependencies": {
-    "vue": "^3.0.5"
+    "vue": "^3.0.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.1.4",
-    "@vue/compiler-sfc": "^3.0.5",
-    "vite": "^2.0.1",
-    "vite-plugin-live-reload": "^2.0.0-beta.0"
+    "@vue/compiler-sfc": "^3.0.6",
+    "vite": "^2.0.3",
+    "vite-plugin-live-reload": "^2.0.0"
   }
 }
